[gd_scene load_steps=16 format=2]

[ext_resource path="res://Escenas/Mapa14/Mapa14.gd" type="Script" id=1]
[ext_resource path="res://Asset/Mapa14/pantalla4nueva.png" type="Texture" id=2]
[ext_resource path="res://Escenas/Tronco/Tronco.tscn" type="PackedScene" id=3]
[ext_resource path="res://Escenas/Personaje/Personaje.tscn" type="PackedScene" id=4]
[ext_resource path="res://Escenas/Piedra/Piedra.tscn" type="PackedScene" id=5]
[ext_resource path="res://Escenas/UI/UI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Asset/UI/boton_salir_normal.png" type="Texture" id=7]
[ext_resource path="res://Asset/UI/boton_salir_presionado.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 206.087, 93.7257 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 181.685, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 353.766, 91.9676 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 51.3745, 15.9362 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 73.8128, 63.3691 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 296.465 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 178.337 )

[node name="Mapa14" type="Node2D"]
script = ExtResource( 1 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 507.419, 300.921 )
scale = Vector2( 0.535671, 0.465578 )
texture = ExtResource( 2 )

[node name="Plataforma1" type="StaticBody2D" parent="."]
position = Vector2( 158.228, 504.572 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataforma1"]
position = Vector2( -77.3475, 2.45547 )
shape = SubResource( 1 )

[node name="Plataforma4" type="StaticBody2D" parent="."]
position = Vector2( 645.763, 415.929 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataforma4"]
position = Vector2( -94.2289, 45.5491 )
shape = SubResource( 2 )

[node name="Plataforma2" type="StaticBody2D" parent="."]
position = Vector2( 678.623, 634.671 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataforma2"]
position = Vector2( 25.7825, 46.6541 )
shape = SubResource( 3 )

[node name="Plataforma3" type="StaticBody2D" parent="."]
position = Vector2( 1250, 367.441 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataforma3"]
position = Vector2( -271.338, -62.494 )
shape = SubResource( 4 )

[node name="Plataforma5" type="StaticBody2D" parent="."]
position = Vector2( 680.82, 547.059 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataforma5"]
position = Vector2( -339.293, 23.7546 )
shape = SubResource( 4 )

[node name="Plataforma6" type="StaticBody2D" parent="."]
position = Vector2( 542.025, 410.596 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataforma6"]
position = Vector2( -329.095, -57.2125 )
shape = SubResource( 5 )

[node name="Tronco" parent="." instance=ExtResource( 3 )]
position = Vector2( 96.695, 388.538 )

[node name="Personaje" parent="." instance=ExtResource( 4 )]

[node name="Mapa13" type="Area2D" parent="."]
position = Vector2( -40.0845, 300.633 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mapa13"]
shape = SubResource( 6 )

[node name="Arriba" type="Area2D" parent="."]
position = Vector2( 1057.33, 289.273 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arriba"]
position = Vector2( -2.27209, -170.406 )
shape = SubResource( 7 )

[node name="Abajo" type="Area2D" parent="."]
position = Vector2( 1059.6, 668.709 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Abajo"]
position = Vector2( -2.27209, -170.406 )
shape = SubResource( 7 )

[node name="Piedra" parent="." instance=ExtResource( 5 )]
position = Vector2( 471.287, 410.986 )
scale = Vector2( 0.5, 0.5 )

[node name="Piedra2" parent="." instance=ExtResource( 5 )]
position = Vector2( 639.426, 378.206 )
scale = Vector2( 0.5, 1 )

[node name="UI" parent="." instance=ExtResource( 6 )]

[node name="TextureButton" type="TextureButton" parent="UI"]
margin_left = 66.9038
margin_top = 503.272
margin_right = 370.904
margin_bottom = 840.272
rect_rotation = -90.2057
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="Izquierda" type="TextureButton" parent="UI"]
margin_left = 102.404
margin_top = 593.104
margin_right = 406.404
margin_bottom = 930.104
rect_rotation = 179.289
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="Derecha" type="TextureButton" parent="UI"]
margin_left = 163.64
margin_top = 495.954
margin_right = 467.64
margin_bottom = 832.954
rect_rotation = 358.708
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
[connection signal="area_entered" from="Mapa13" to="." method="_on_Mapa13_area_entered"]
[connection signal="area_entered" from="Arriba" to="." method="_on_Arriba_area_entered"]
[connection signal="area_entered" from="Abajo" to="." method="_on_Abajo_area_entered"]
[connection signal="pressed" from="UI/TextureButton" to="Personaje" method="_on_TextureButton_pressed"]
[connection signal="button_down" from="UI/Izquierda" to="Personaje" method="_on_Izquierda_button_down"]
[connection signal="button_up" from="UI/Derecha" to="Personaje" method="_on_Derecha_button_up"]
